--- a/scss/main/_section1.scss
+++ b/scss/main/_section1.scss
@@ -1,8 +1,8 @@
-.div-main-general-section1 {
+.custom-section-intro-wrapper {
     display: flex;
     margin: 0px 0px 170px 80px;
 
-    &__div-text-text1 {
+    &__text-primary {
         width: 250px;
     }
 
