--- a/css/style.css
+++ b/css/style.css
@@ -42,22 +42,22 @@
   color: rgba(255, 255, 255, 0.3);
 }
 
-.custom-section-intro-wrapper {
+.div-main-general-section-order {
   display: flex;
   margin: 0px 0px 170px 80px;
 }
-.custom-section-intro-wrapper__text-primary {
+.div-main-general-section-order__div-text-text-start {
   width: 250px;
 }
-.custom-section-intro-wrapper__div-text-text2 {
+.div-main-general-section-order__div-text-text-end {
   width: 120px;
 }
-.custom-section-intro-wrapper__div-text {
+.div-main-general-section-order__div-text {
   display: flex;
   flex-direction: column;
   gap: 36px;
 }
-.custom-section-intro-wrapper__div-text-and-button-button {
+.div-main-general-section-order__div-text-and-button-button {
   font-weight: 600;
   font-size: 20px;
   letter-spacing: 0.02em;
@@ -67,7 +67,7 @@
   background: #DF3D3A;
   border: 0px;
 }
-.custom-section-intro-wrapper__div-text-and-button {
+.div-main-general-section-order__div-text-and-button {
   display: flex;
   flex-direction: column;
   gap: 86px;
@@ -78,130 +78,130 @@ h1 {
   width: 600px;
 }
 
-.part2-section1 {
+.part2-section-order {
   width: 600px;
 }
 
 @media (max-width: 1300px) {
-  .part2-section1 {
+  .part2-section-order {
     width: 480px;
   }
-  .div-main-general-section1__div-text-and-button-button {
+  .div-main-general-section-order__div-text-and-button-button {
     padding: 22px 122px;
   }
 }
-.div-main-general-section2 {
+.div-main-general-section-description {
   display: flex;
   gap: 100px;
 }
-.div-main-general-section2__div-text-2half {
+.div-main-general-section-description__div-text-2half {
   width: 390px;
   display: flex;
   flex-direction: column;
   gap: 20px;
 }
-.div-main-general-section2__div-text-1half {
+.div-main-general-section-description__div-text-1half {
   width: 390px;
   display: flex;
   flex-direction: column;
   gap: 20px;
 }
-.div-main-general-section2__div-text-osnova {
+.div-main-general-section-description__div-text-osnova {
   display: flex;
   flex-direction: column;
   gap: 40px;
 }
-.div-main-general-section2__div-text {
+.div-main-general-section-description__div-text {
   display: flex;
   flex-direction: column;
   gap: 50px;
 }
 
 @media (max-width: 1200px) {
-  .part2-section2 {
+  .part2-section-description {
     width: 480px;
   }
 }
-.div-main-general-section3 {
+.div-main-general-section-functionality {
   display: flex;
   flex-direction: column;
   gap: 50px;
   padding: 170px 0px;
   align-items: center;
 }
-.div-main-general-section3__title {
+.div-main-general-section-functionality__title {
   padding: 0px 140px 0px 0px;
 }
-.div-main-general-section3__div-content-text1-half {
+.div-main-general-section-functionality__div-content-text1-half {
   display: flex;
   align-items: center;
   gap: 10px;
 }
-.div-main-general-section3__div-content-text1-half-img {
+.div-main-general-section-functionality__div-content-text1-half-img {
   height: 13px;
 }
-.div-main-general-section3__div-content-text1 {
+.div-main-general-section-functionality__div-content-text1 {
   display: flex;
   flex-direction: column;
   gap: 20px;
 }
-.div-main-general-section3__div-content-text2 {
+.div-main-general-section-functionality__div-content-text2 {
   display: flex;
   flex-direction: column;
   gap: 20px;
 }
-.div-main-general-section3__div-content {
+.div-main-general-section-functionality__div-content {
   display: flex;
   gap: 220px;
 }
 
-.div-main-general-section4 {
+.div-main-general-section-img {
   display: flex;
   flex-direction: column;
   align-items: end;
 }
-.div-main-general-section4__title {
+.div-main-general-section-img__title {
   padding: 0px 80px 50px 0px;
 }
-.div-main-general-section4__img {
+.div-main-general-section-img__img {
   background-image: url(/img/image234.png);
   width: 100%;
 }
 
 @media (max-width: 1200px) {
-  .div-main-general-section4__title {
+  .div-main-general-section-img__title {
     font-size: 40px;
   }
 }
-.div-main-general-section5 {
+.div-main-general-section-text {
   display: flex;
   justify-content: center;
   gap: 40px;
   padding: 50px 0px 170px 0px;
 }
-.div-main-general-section5__div-text {
+.div-main-general-section-text__div-text {
   display: flex;
   flex-direction: column;
   gap: 20px;
   width: 380px;
 }
 
-.div-main-general-section6 {
+.div-main-general-section-information-platform {
   display: flex;
   max-width: 1250px;
   gap: 170px;
 }
-.div-main-general-section6__content {
+.div-main-general-section-information-platform__content {
   display: flex;
   flex-direction: column;
   gap: 50px;
 }
-.div-main-general-section6__osnova-content {
+.div-main-general-section-information-platform__osnova-content {
   display: flex;
   flex-direction: column;
   gap: 20px;
 }
-.div-main-general-section6__osnova-content-text {
+.div-main-general-section-information-platform__osnova-content-text {
   width: 300px;
 }
 
@@ -211,125 +211,125 @@ h1 {
 }
 
 @media (max-width: 1383px) {
-  .part2-section6 {
+  .part2-section-information-platform {
     width: 500px;
   }
 }
-.div-main-general-section7 {
+.div-main-general-section-advantages {
   display: flex;
   gap: 130px;
   padding: 170px 0px;
 }
-.div-main-general-section7__div-content {
+.div-main-general-section-advantages__div-content {
   display: flex;
   flex-direction: column;
   gap: 50px;
 }
-.div-main-general-section7__div-content-part1 {
+.div-main-general-section-advantages__div-content-part1 {
   display: flex;
   flex-direction: column;
   gap: 24px;
   width: 330px;
 }
-.div-main-general-section7__div-content-part2 {
+.div-main-general-section-advantages__div-content-part2 {
   display: flex;
   flex-direction: column;
   gap: 24px;
   width: 290px;
 }
 
-.part2-section7 {
+.part2-section-advantages {
   width: 500px;
 }
 
-.div-main-general-section8 {
+.div-main-general-section-history {
   display: flex;
   justify-content: end;
   gap: 150px;
 }
-.div-main-general-section8__div-part1 {
+.div-main-general-section-history__div-part1 {
   display: flex;
   flex-direction: column;
   gap: 50px;
 }
-.div-main-general-section8__div-part1-text {
+.div-main-general-section-history__div-part1-text {
   display: flex;
   flex-direction: column;
   gap: 74px;
 }
-.div-main-general-section8__div-part1-title {
+.div-main-general-section-history__div-part1-title {
   width: 200px;
 }
-.div-main-general-section8__div-part1-text {
+.div-main-general-section-history__div-part1-text {
   width: 420px;
 }
-.div-main-general-section8__div-part1-text2 {
+.div-main-general-section-history__div-part1-text2 {
   width: 300px;
 }
 
 @media (max-width: 1275px) {
-  .div-main-general-section8 {
+  .div-main-general-section-history {
     gap: 100px;
   }
-  .part2-section8 {
+  .part2-section-history {
     width: 500px;
   }
 }
-.div-main-general-section9 {
+.div-main-general-section9-developer {
   display: flex;
   align-items: end;
   justify-content: center;
   gap: 260px;
   padding: 0px 0px 170px 0px;
 }
-.div-main-general-section9__osnava-content {
+.div-main-general-section9-developer__osnava-content {
   display: flex;
   flex-direction: column;
   gap: 32px;
 }
-.div-main-general-section9__osnava-content-img {
+.div-main-general-section9-developer__osnava-content-img {
   width: 34px;
   height: 50px;
   padding: 0px 0px 18px 0px;
 }
-.div-main-general-section9__osnava-content-titel {
+.div-main-general-section9-developer__osnava-content-titel {
   width: 400px;
 }
 
-.div-main-general-section10 {
+.div-main-general-section-video {
   display: flex;
   gap: 150px;
 }
-.div-main-general-section10__div-content {
+.div-main-general-section-video__div-content {
   display: flex;
   flex-direction: column;
   gap: 50px;
 }
-.div-main-general-section10__div-content-text {
+.div-main-general-section-video__div-content-text {
   display: flex;
   flex-direction: column;
   gap: 16px;
 }
-.div-main-general-section10__div-content-text-text {
+.div-main-general-section-video__div-content-text-text {
   width: 200px;
 }
-.div-main-general-section10__div-content-text-link {
+.div-main-general-section-video__div-content-text-link {
   color: #DF3D3A;
   font-size: 28px;
   display: flex;
 }
-.div-main-general-section10__div-content-div-link-link {
+.div-main-general-section-video__div-content-div-link-link {
   color: #DF3D3A;
 }
-.div-main-general-section10__video3 {
+.div-main-general-section-video__video3 {
   width: 920px;
   height: 590px;
 }
-.div-main-general-section10__video2 {
+.div-main-general-section-video__video2 {
   width: 920px;
   height: 590px;
 }
-.div-main-general-section10__video1 {
+.div-main-general-section-video__video1 {
   width: 920px;
   height: 590px;
 }
@@ -338,31 +338,31 @@ h1 {
   display: block;
 }
 
-.swiper-button-section10 {
+.swiper-button-section-video {
   display: flex;
   gap: 12px;
 }
 
-.div-main-general-section11 {
+.div-main-general-section-question {
   display: flex;
   flex-direction: column;
   gap: 50px;
 }
-.div-main-general-section11__div-text {
+.div-main-general-section-question__div-text {
   display: flex;
   justify-content: space-between;
   width: 1029px;
   padding: 0px 0px 24px;
   border-bottom: 2px solid;
 }
-.div-main-general-section11__button {
+.div-main-general-section-question__button {
   color: white;
   border-radius: 100%;
   border: 0px;
   padding: 11px 18px 11px 18px;
   background-color: rgb(50, 45, 45);
 }
-.div-main-general-section11__osnova-content {
+.div-main-general-section-question__osnova-content {
   display: flex;
   flex-direction: column;
   gap: 64px;
@@ -373,48 +373,48 @@ h1 {
   justify-content: center;
 }
 
-.div-main-general-section12 {
+.div-main-general-section-prise {
   display: flex;
   justify-content: end;
   gap: 150px;
   padding: 170px 0px;
   position: relative;
 }
-.div-main-general-section12__div-part1 {
+.div-main-general-section-prise__div-part1 {
   display: flex;
   flex-direction: column;
   gap: 50px;
 }
-.div-main-general-section12__div-part1-img {
+.div-main-general-section-prise__div-part1-img {
   display: flex;
   gap: 20px;
 }
-.div-main-general-section12__div-part2 {
+.div-main-general-section-prise__div-part2 {
   display: flex;
   flex-direction: column;
   gap: 26px;
 }
-.div-main-general-section12__div-part3 {
+.div-main-general-section-prise__div-part3 {
   display: flex;
   flex-direction: column;
   gap: 32px;
 }
-.div-main-general-section12__content {
+.div-main-general-section-prise__content {
   display: flex;
   flex-direction: column;
   gap: 50px;
 }
-.div-main-general-section12__div-part2-text {
+.div-main-general-section-prise__div-part2-text {
   display: flex;
   justify-content: space-between;
   padding: 26px 0px 0px;
   border-top: 2px solid;
   width: 400px;
 }
-.div-main-general-section12__div-part3-text {
+.div-main-general-section-prise__div-part3-text {
   color: #DF3D3A;
 }
-.div-main-general-section12__div-part3-button {
+.div-main-general-section-prise__div-part3-button {
   font-weight: 600;
   font-size: 20px;
   letter-spacing: 0.02em;
@@ -425,7 +425,7 @@ h1 {
   width: 400px;
   border: 0px;
 }
-.div-main-general-section12__div-part2-text2 {
+.div-main-general-section-prise__div-part2-text2 {
   display: flex;
   justify-content: space-between;
   width: 400px;
