--- a/scss/main/_section6.scss
+++ b/scss/main/_section6.scss
@@ -1,6 +1,6 @@
 .div-main-general-section-information-platform {
     display: flex;
-    max-width: 1250px;
+    justify-content: end;
     gap: 170px;
 
     &__content {
