--- a/scss/main/_section1.scss
+++ b/scss/main/_section1.scss
@@ -1,6 +1,6 @@
 .div-main-general-section-order {
     display: flex;
-    margin: 0px 0px 170px 80px;
+    justify-content: end;
 
     &__div-text-text-start {
         width: 250px;
@@ -52,3 +52,14 @@ h1 {
         padding: 22px 122px;
     }
 }
+
+// @media (max-width: 1024px) {
+//     .part2-section-order {
+//         width: 354px;
+//         height: 394px;
+//     }
+
+//     .div-main-general-section-order {
+//         gap: 65px;
+//     }
+// }
