--- a/scss/main/_section2.scss
+++ b/scss/main/_section2.scss
@@ -29,6 +29,10 @@
     }
 }
 
+.section-description {
+    padding: 170px 0px 0px;
+}
+
 @media (max-width:1200px) {
     .part2-section-description {
         width: 480px;
