--- a/css/style.css
+++ b/css/style.css
@@ -394,7 +394,8 @@ h1 {
 }
 .div-main-general-section-prise__div-part1-img {
   display: flex;
-  gap: 20px;
+  gap: 70px;
+  padding: 0px 0px 0px 20px;
 }
 .div-main-general-section-prise__div-part2 {
   display: flex;
