--- a/scss/main/_section12.scss
+++ b/scss/main/_section12.scss
@@ -13,7 +13,8 @@
 
     &__div-part1-img {
         display: flex;
-        gap: 20px;
+        gap: 70px;
+        padding: 0px 0px 0px 20px;
     }
 
     &__div-part2 {
