--- a/scss/main/_section1.scss
+++ b/scss/main/_section1.scss
@@ -39,12 +39,12 @@ h1 {
     width: 600px;
 }
 
-.part2-section-order {
+.part-img-section-order {
     width: 600px;
 }
 
 @media (max-width: 1300px) {
-    .part2-section-order {
+    .part-img-section-order {
         width: 480px;
     }    
 
