--- a/scss/main/_section10.scss
+++ b/scss/main/_section10.scss
@@ -28,17 +28,17 @@
         color: #DF3D3A;
     }
 
-    &__video3 {
+    &__video-end {
         width: 920px;
         height: 590px;
     }
 
-    &__video2 {
+    &__video--middle {
         width: 920px;
         height: 590px;
     }
 
-    &__video1 {
+    &__video-start {
         width: 920px;
         height: 590px;
     }
