--- a/scss/main/_section13.scss
+++ b/scss/main/_section13.scss
@@ -28,7 +28,7 @@
         margin: 33px 0px 0px;
     }
 
-    &__div-input-input1 {
+    &__div-input-input-start {
         background-color: black;
         color: white;
         border: 0px;
@@ -36,7 +36,7 @@
         padding: 0px 277px 17px 0px;
     }
 
-    &__div-input-input2 {
+    &__div-input-input-end {
         background-color: black;
         color: white;
         border: 0px;
@@ -62,7 +62,7 @@
         gap: 2px;
     }
 
-    &__div-text-h4 {
+    &__div-text-h-midlle {
         width: 370px;
     }
 }
