--- a/scss/main/_section2.scss
+++ b/scss/main/_section2.scss
@@ -2,14 +2,14 @@
     display: flex;
     gap: 100px;
 
-    &__div-text-2half {
+    &__div-text-bottom-half {
         width: 390px;
         display: flex;
         flex-direction: column;
         gap: 20px;
     }
 
-    &__div-text-1half {
+    &__div-text-top-half {
         width: 390px;
         display: flex;
         flex-direction: column;
@@ -34,7 +34,7 @@
 }
 
 @media (max-width:1200px) {
-    .part2-section-description {
+    .part-img-section-description {
         width: 480px;
     }
 }
