--- a/scss/main/_section8.scss
+++ b/scss/main/_section8.scss
@@ -3,27 +3,27 @@
     justify-content: end;
     gap: 150px;
 
-    &__div-part1 {
+    &__div-part-top {
         display: flex;
         flex-direction: column;
         gap: 50px;
     }
 
-    &__div-part1-text {
+    &__div--top-text {
         display: flex;
         flex-direction: column;
         gap: 74px;
     }
 
-    &__div-part1-title {
+    &__div-part-top-title {
         width: 200px;
     }
 
-    &__div-part1-text {
+    &__div-part-top-text {
         width: 420px;
     }
 
-    &__div-part1-text2 {
+    &__div-part-top-text-start {
         width: 300px;
     }
 }
@@ -33,7 +33,7 @@
         gap: 100px;
     }
 
-    .part2-section-history {
+    .part-end-section-history {
         width: 500px;
     }
 }
