--- a/scss/_stily.scss
+++ b/scss/_stily.scss
@@ -1,7 +1,8 @@
 p {
     font-weight: 400;
-    font-size: 16px;
     color: rgba(255, 255, 255, 0.8);
+    font-size: 20px;
+    line-height: 145%;
 }
 
 h1 {
