--- a/scss/main/_section13.scss
+++ b/scss/main/_section13.scss
@@ -54,7 +54,8 @@
     &__div-galochka-link {
         color: rgba(255, 255, 255, 0.8);
         text-decoration: underline;
-        padding: 0px 20px 0px 0px;
+        padding: 4px 0px 0px 10px;
+        font-size: 18px;
     }
 
     &__div-galochka-flex-link {
