--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,4 @@
-@import './_header';
+@import './header';
 @import './footer';
 @import './modal';
 @import './main/section1';
@@ -13,5 +13,5 @@
 @import './main/section10';
 @import './main/section11';
 @import './main/section12';
-@import './main/_section13';
+@import './main/section13';
 @import './stily';
